[tool.poetry]
name = "talkgpt"
version = "0.1.0"
description = "Talk to chatgpt"
authors = ["WincerChan <WincerChan@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
edge-tts = "^6.1.3"
openai = "^0.27.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
ipython = "^8.11.0"
black = "^23.1.0"
PyAudio = "^0.2.13"
pydub = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
