[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipython<9.0.0,>=8.11.0",
    "black<24.0.0,>=23.1.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[project]
name = "talkgpt"
version = "0.1.0"
description = "Talk to chatgpt"
authors = [
    {name = "Wincer", email = "WincerChan+github@gmail.com"},
]
dependencies = [
    "edge-tts<7.0.0,>=6.1.3",
    "openai<1.0.0,>=0.27.1",
    "python-dotenv<2.0.0,>=1.0.0",
    "pyobjc>=9.0.1",
    "gtts>=2.3.1",
    "SpeechRecognition>=3.9.0",
    "pydub>=0.25.1",
    "PyAudio>=0.2.13",
]
requires-python = ">=3.10,<4.0"
license = {text = "GPLv3"}

[project.urls]
